litmask/tests/compile/mask_serialize_serde_attr_field.stderr
error: MaskSerialize! invalid-arg: `#[serde(...)]` attributes are not supported
 --> tests/compile/mask_serialize_serde_attr_field.rs:9:5
  |
9 |     #[serde(rename = "url")]
  |     ^
